--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <!--Metas-->
     <meta charset="UTF-8">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="MeuDepósito - Guarde tudo de maneira fácil e econômica">
@@ -515,8 +516,6 @@
                         <h5>Menu</h5>
 
                         <ul class="list-menu ">
-                            
-
                             <li>
                                 <a data-scroll="" class="section-scroll" href="#home">Início</a>
                             </li>
@@ -536,6 +535,9 @@
                             </li>
                             <li>
                                 <a data-scroll="" class="section-scroll" href="#contact">Contato</a>
+                            </li>
+                            <li>
+                                <a class="section-scroll" href="politicas-privacidade.html">Políticas e privacidade</a>
                             </li>
 
                         </ul>
